apps/calibre/ingress.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.32.0-standalone-strict/ingress-networking.k8s.io-v1.json
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: calibre-manage.${BASE_DOMAIN}
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10000m"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Rewrite using the first capture group ($1) from the matching path regex
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - calibre-manage.${BASE_DOMAIN}
      secretName: calibre-manage-tls
  rules:
    - host: calibre-manage.${BASE_DOMAIN}
      http:
        paths:
          - path: /content/?(.*) # Capture group $1 is everything after /content/
            pathType: ImplementationSpecific
            backend:
              service:
                name: calibre
                port:
                  name: server
          # Path 2: Main GUI (Broader Path Second)
          - path: /?(.*) # Matches / or /anything. Capture group $1 is the 'anything' or empty
            pathType: ImplementationSpecific
            backend:
              service:
                name: calibre
                port:
                  name: http
